{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 428,
  "lineage": "8b18f685-978b-be5b-8253-c9c790765973",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "dev_bastion_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fe232a0913585985",
            "arn": "arn:aws:ec2:ap-northeast-2:703671932868:elastic-ip/eipalloc-0fe232a0913585985",
            "association_id": "eipassoc-0ca8e5e0ffb41af7d",
            "domain": "vpc",
            "id": "eipalloc-0fe232a0913585985",
            "instance": "i-0b96d54c451e7a1dc",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-01b27deef1a9888ec",
            "private_dns": "ip-10-230-2-43.ap-northeast-2.compute.internal",
            "private_ip": "10.230.2.43",
            "public_dns": "ec2-54-180-181-156.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "54.180.181.156",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev_bastion_eip"
            },
            "tags_all": {
              "Name": "dev_bastion_eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.dev_bastion",
            "aws_security_group.dev_bastion_security",
            "aws_subnet.dev_pub_sub_c",
            "aws_vpc.dev_vpc",
            "data.aws_ami.ubuntu_22_04_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "dev_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00eda742755180c1b",
            "arn": "arn:aws:ec2:ap-northeast-2:703671932868:elastic-ip/eipalloc-00eda742755180c1b",
            "association_id": "eipassoc-0f0497c7124815208",
            "domain": "vpc",
            "id": "eipalloc-00eda742755180c1b",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-04b79a1913fd22eff",
            "private_dns": "ip-10-230-2-212.ap-northeast-2.compute.internal",
            "private_ip": "10.230.2.212",
            "public_dns": "ec2-52-78-190-202.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "52.78.190.202",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev_nat_eip"
            },
            "tags_all": {
              "Name": "dev_nat_eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "prd_bastion_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05bb613eafce1826c",
            "arn": "arn:aws:ec2:ap-northeast-2:703671932868:elastic-ip/eipalloc-05bb613eafce1826c",
            "association_id": "eipassoc-01565881ea8a9c39d",
            "domain": "vpc",
            "id": "eipalloc-05bb613eafce1826c",
            "instance": "i-069a171b535d5afb0",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-01ebabff976395fe4",
            "private_dns": "ip-10-250-2-201.ap-northeast-2.compute.internal",
            "private_ip": "10.250.2.201",
            "public_dns": "ec2-43-200-23-26.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.200.23.26",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "prd_bastion_eip"
            },
            "tags_all": {
              "Name": "prd_bastion_eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.prd_bastion",
            "aws_security_group.prd_bastion_security",
            "aws_subnet.prd_pub_sub_c",
            "aws_vpc.prd_vpc",
            "data.aws_ami.ubuntu_22_04_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "prd_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-050771112ef3478da",
            "arn": "arn:aws:ec2:ap-northeast-2:703671932868:elastic-ip/eipalloc-050771112ef3478da",
            "association_id": "eipassoc-031caaebfbad6f2bf",
            "domain": "vpc",
            "id": "eipalloc-050771112ef3478da",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-09469c308a1ee2e76",
            "private_dns": "ip-10-250-2-98.ap-northeast-2.compute.internal",
            "private_ip": "10.250.2.98",
            "public_dns": "ec2-3-35-145-208.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.35.145.208",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "prd_nat_eip"
            },
            "tags_all": {
              "Name": "prd_nat_eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f9927e688b46377f",
            "arn": "arn:aws:ec2:ap-northeast-2:703671932868:instance/i-0b96d54c451e7a1dc",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b96d54c451e7a1dc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "awesomekey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01b27deef1a9888ec",
            "private_dns": "ip-10-230-2-43.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.230.2.43",
            "public_dns": "ec2-54-180-181-156.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "54.180.181.156",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-063722bb6c20167bd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-001e024346615c7ba",
            "tags": {
              "Name": "dev_bastion"
            },
            "tags_all": {
              "Name": "dev_bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0baf5eacb78eae0d7"
            ]
          },
          "dependencies": [
            "aws_security_group.dev_bastion_security",
            "aws_subnet.dev_pub_sub_c",
            "aws_vpc.dev_vpc",
            "data.aws_ami.ubuntu_22_04_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev_k8s-managed-Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f9927e688b46377f",
            "arn": "arn:aws:ec2:ap-northeast-2:703671932868:instance/i-0d95d828cc2748f8b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d95d828cc2748f8b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "awesomekey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04e6a6ffbb29bf706",
            "private_dns": "ip-10-230-1-254.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.230.1.254",
            "public_dns": "ec2-3-36-95-215.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.36.95.215",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0440050140f698af5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0eae913d1d865e9a2",
            "tags": {
              "Name": "dev_k8s_managed_Server"
            },
            "tags_all": {
              "Name": "dev_k8s_managed_Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0baf5eacb78eae0d7"
            ]
          },
          "dependencies": [
            "aws_security_group.dev_bastion_security",
            "aws_subnet.dev_pub_sub_a",
            "aws_vpc.dev_vpc",
            "data.aws_ami.ubuntu_22_04_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f9927e688b46377f",
            "arn": "arn:aws:ec2:ap-northeast-2:703671932868:instance/i-01fe8fbde37eacbb8",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01fe8fbde37eacbb8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "awesomekey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03b19a139ff56d169",
            "private_dns": "ip-10-250-1-57.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.250.1.57",
            "public_dns": "ec2-3-35-229-104.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.35.229.104",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-068ae5ca46b845bfb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0acabb83dfbd5ba07",
            "tags": {
              "Name": "jenkins"
            },
            "tags_all": {
              "Name": "jenkins"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07d3227c565bdda10"
            ]
          },
          "dependencies": [
            "aws_security_group.jenkins_security",
            "aws_subnet.prd_pub_sub_a",
            "aws_vpc.prd_vpc",
            "data.aws_ami.ubuntu_22_04_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "prd_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f9927e688b46377f",
            "arn": "arn:aws:ec2:ap-northeast-2:703671932868:instance/i-069a171b535d5afb0",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-069a171b535d5afb0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "awesomekey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01ebabff976395fe4",
            "private_dns": "ip-10-250-2-201.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.250.2.201",
            "public_dns": "ec2-43-200-23-26.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.200.23.26",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0743e0c476cc8c8b6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07727c226e54a8661",
            "tags": {
              "Name": "prd_bastion"
            },
            "tags_all": {
              "Name": "prd_bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-094b9670dc71e7093"
            ]
          },
          "dependencies": [
            "aws_security_group.prd_bastion_security",
            "aws_subnet.prd_pub_sub_c",
            "aws_vpc.prd_vpc",
            "data.aws_ami.ubuntu_22_04_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "prd_efs_managed_Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f9927e688b46377f",
            "arn": "arn:aws:ec2:ap-northeast-2:703671932868:instance/i-09a099fe390ab6240",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09a099fe390ab6240",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "awesomekey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-056b22a0edecea685",
            "private_dns": "ip-10-250-1-63.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.250.1.63",
            "public_dns": "ec2-13-125-192-248.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.125.192.248",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0092cd53b5795ff3f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0acabb83dfbd5ba07",
            "tags": {
              "Name": "prd_efs_managed_Server"
            },
            "tags_all": {
              "Name": "prd_efs_managed_Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-094b9670dc71e7093"
            ]
          },
          "dependencies": [
            "aws_security_group.prd_bastion_security",
            "aws_subnet.prd_pub_sub_a",
            "aws_vpc.prd_vpc",
            "data.aws_ami.ubuntu_22_04_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "prd_k8s-managed-Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f9927e688b46377f",
            "arn": "arn:aws:ec2:ap-northeast-2:703671932868:instance/i-0a9024e8e37bf07da",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a9024e8e37bf07da",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "awesomekey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-023b31c0a6d894386",
            "private_dns": "ip-10-250-1-197.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.250.1.197",
            "public_dns": "ec2-3-35-51-209.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.35.51.209",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b016266dfcb3b285",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0acabb83dfbd5ba07",
            "tags": {
              "Name": "prd_k8s_managed_Server"
            },
            "tags_all": {
              "Name": "prd_k8s_managed_Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-094b9670dc71e7093"
            ]
          },
          "dependencies": [
            "aws_security_group.prd_bastion_security",
            "aws_subnet.prd_pub_sub_a",
            "aws_vpc.prd_vpc",
            "data.aws_ami.ubuntu_22_04_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pub_argocd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f9927e688b46377f",
            "arn": "arn:aws:ec2:ap-northeast-2:703671932868:instance/i-0679ab0eb005a746f",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0679ab0eb005a746f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "awesomekey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f8e5850439e6227c",
            "private_dns": "ip-10-250-1-193.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.250.1.193",
            "public_dns": "ec2-52-78-240-148.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "52.78.240.148",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06e79693f7bcb729d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0acabb83dfbd5ba07",
            "tags": {
              "Name": "prd_argocd"
            },
            "tags_all": {
              "Name": "prd_argocd"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-094b9670dc71e7093"
            ]
          },
          "dependencies": [
            "aws_security_group.prd_bastion_security",
            "aws_subnet.prd_pub_sub_a",
            "aws_vpc.prd_vpc",
            "data.aws_ami.ubuntu_22_04_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:703671932868:internet-gateway/igw-08cba6b653b374ed4",
            "id": "igw-08cba6b653b374ed4",
            "owner_id": "703671932868",
            "tags": {
              "Name": "dev_igw"
            },
            "tags_all": {
              "Name": "dev_igw"
            },
            "vpc_id": "vpc-0594e389fa7a3f3ab"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prd_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:703671932868:internet-gateway/igw-02e7fae26e85ecc5a",
            "id": "igw-02e7fae26e85ecc5a",
            "owner_id": "703671932868",
            "tags": {
              "Name": "prd_igw"
            },
            "tags_all": {
              "Name": "prd_igw"
            },
            "vpc_id": "vpc-021a029ebdeeea5f2"
          },
          "dependencies": [
            "aws_vpc.prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "dev_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00eda742755180c1b",
            "association_id": "eipassoc-0f0497c7124815208",
            "connectivity_type": "public",
            "id": "nat-0865d9e4151e1a41a",
            "network_interface_id": "eni-04b79a1913fd22eff",
            "private_ip": "10.230.2.212",
            "public_ip": "52.78.190.202",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-001e024346615c7ba",
            "tags": {
              "Name": "dev_nat"
            },
            "tags_all": {
              "Name": "dev_nat"
            }
          },
          "dependencies": [
            "aws_eip.dev_nat_eip",
            "aws_internet_gateway.dev_igw",
            "aws_subnet.dev_pub_sub_c",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "prd_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-050771112ef3478da",
            "association_id": "eipassoc-031caaebfbad6f2bf",
            "connectivity_type": "public",
            "id": "nat-07b2944605382517e",
            "network_interface_id": "eni-09469c308a1ee2e76",
            "private_ip": "10.250.2.98",
            "public_ip": "3.35.145.208",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07727c226e54a8661",
            "tags": {
              "Name": "prd_nat"
            },
            "tags_all": {
              "Name": "prd_nat"
            }
          },
          "dependencies": [
            "aws_eip.prd_nat_eip",
            "aws_internet_gateway.prd_igw",
            "aws_subnet.prd_pub_sub_c",
            "aws_vpc.prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "dev_to_prd_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.250.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0422b036e88b886033085032262",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0422b036e88b88603",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-08b54cb2038701bb5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dev_igw",
            "aws_route_table.dev_pub_rt",
            "aws_vpc.dev_vpc",
            "aws_vpc.prd_vpc",
            "aws_vpc_peering_connection.prd_dev_peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "prd_to_dev_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.230.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09a24191ae5f3a1a53304825548",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09a24191ae5f3a1a5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-08b54cb2038701bb5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.prd_igw",
            "aws_route_table.prd_pub_rt",
            "aws_vpc.dev_vpc",
            "aws_vpc.prd_vpc",
            "aws_vpc_peering_connection.prd_dev_peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_pri_rt_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:703671932868:route-table/rtb-00d88f935ed2c4661",
            "id": "rtb-00d88f935ed2c4661",
            "owner_id": "703671932868",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0865d9e4151e1a41a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": " dev_pri_rt_2a"
            },
            "tags_all": {
              "Name": " dev_pri_rt_2a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0594e389fa7a3f3ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.dev_nat_eip",
            "aws_internet_gateway.dev_igw",
            "aws_nat_gateway.dev_nat",
            "aws_subnet.dev_pub_sub_c",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_pri_rt_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:703671932868:route-table/rtb-00c786bf7e3c0dbf5",
            "id": "rtb-00c786bf7e3c0dbf5",
            "owner_id": "703671932868",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0865d9e4151e1a41a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": " dev_pri_rt_2c"
            },
            "tags_all": {
              "Name": " dev_pri_rt_2c"
            },
            "timeouts": null,
            "vpc_id": "vpc-0594e389fa7a3f3ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.dev_nat_eip",
            "aws_internet_gateway.dev_igw",
            "aws_nat_gateway.dev_nat",
            "aws_subnet.dev_pub_sub_c",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:703671932868:route-table/rtb-0422b036e88b88603",
            "id": "rtb-0422b036e88b88603",
            "owner_id": "703671932868",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": null,
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": null,
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": null,
                "gateway_id": "igw-08cba6b653b374ed4",
                "ipv6_cidr_block": null,
                "local_gateway_id": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {
              "Name": "dev_pub_rt"
            },
            "tags_all": {
              "Name": "dev_pub_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0594e389fa7a3f3ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dev_igw",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prd_pri_rt_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:703671932868:route-table/rtb-0f24e95a6e4ce0840",
            "id": "rtb-0f24e95a6e4ce0840",
            "owner_id": "703671932868",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-07b2944605382517e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": " prd_pri_rt_2a"
            },
            "tags_all": {
              "Name": " prd_pri_rt_2a"
            },
            "timeouts": null,
            "vpc_id": "vpc-021a029ebdeeea5f2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.prd_nat_eip",
            "aws_internet_gateway.prd_igw",
            "aws_nat_gateway.prd_nat",
            "aws_subnet.prd_pub_sub_c",
            "aws_vpc.prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prd_pri_rt_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:703671932868:route-table/rtb-07754cc6686d32905",
            "id": "rtb-07754cc6686d32905",
            "owner_id": "703671932868",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-07b2944605382517e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": " prd_pri_rt_2c"
            },
            "tags_all": {
              "Name": " prd_pri_rt_2c"
            },
            "timeouts": null,
            "vpc_id": "vpc-021a029ebdeeea5f2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.prd_nat_eip",
            "aws_internet_gateway.prd_igw",
            "aws_nat_gateway.prd_nat",
            "aws_subnet.prd_pub_sub_c",
            "aws_vpc.prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prd_pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:703671932868:route-table/rtb-09a24191ae5f3a1a5",
            "id": "rtb-09a24191ae5f3a1a5",
            "owner_id": "703671932868",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": null,
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": null,
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": null,
                "gateway_id": "igw-02e7fae26e85ecc5a",
                "ipv6_cidr_block": null,
                "local_gateway_id": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {
              "Name": "prd_pub_rt"
            },
            "tags_all": {
              "Name": "prd_pub_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-021a029ebdeeea5f2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.prd_igw",
            "aws_vpc.prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_db_pri_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0968b2e80dd2f81ee",
            "route_table_id": "rtb-00d88f935ed2c4661",
            "subnet_id": "subnet-093917453196e5c5d"
          },
          "dependencies": [
            "aws_eip.dev_nat_eip",
            "aws_internet_gateway.dev_igw",
            "aws_nat_gateway.dev_nat",
            "aws_route_table.dev_pri_rt_a",
            "aws_subnet.dev_db_sub_a",
            "aws_subnet.dev_pub_sub_c",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_db_pri_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07cbe5b061cad1efd",
            "route_table_id": "rtb-00c786bf7e3c0dbf5",
            "subnet_id": "subnet-0ac1be726ca2c5afb"
          },
          "dependencies": [
            "aws_eip.dev_nat_eip",
            "aws_internet_gateway.dev_igw",
            "aws_nat_gateway.dev_nat",
            "aws_route_table.dev_pri_rt_c",
            "aws_subnet.dev_db_sub_c",
            "aws_subnet.dev_pub_sub_c",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_mgnt_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0473688d8bbab929b",
            "route_table_id": "rtb-00d88f935ed2c4661",
            "subnet_id": "subnet-054206002d646b2dc"
          },
          "dependencies": [
            "aws_eip.dev_nat_eip",
            "aws_internet_gateway.dev_igw",
            "aws_nat_gateway.dev_nat",
            "aws_route_table.dev_pri_rt_a",
            "aws_subnet.dev_mgnt_sub_a",
            "aws_subnet.dev_pub_sub_c",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_mgnt_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f21629c377cfbb1c",
            "route_table_id": "rtb-00c786bf7e3c0dbf5",
            "subnet_id": "subnet-0313faf084853301d"
          },
          "dependencies": [
            "aws_eip.dev_nat_eip",
            "aws_internet_gateway.dev_igw",
            "aws_nat_gateway.dev_nat",
            "aws_route_table.dev_pri_rt_c",
            "aws_subnet.dev_mgnt_sub_c",
            "aws_subnet.dev_pub_sub_c",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_node_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-010571f043041cd1b",
            "route_table_id": "rtb-00d88f935ed2c4661",
            "subnet_id": "subnet-0aaae6a8bfd539cb5"
          },
          "dependencies": [
            "aws_eip.dev_nat_eip",
            "aws_internet_gateway.dev_igw",
            "aws_nat_gateway.dev_nat",
            "aws_route_table.dev_pri_rt_a",
            "aws_subnet.dev_node_sub_a",
            "aws_subnet.dev_pub_sub_c",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_node_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-082e1374ccde0f59d",
            "route_table_id": "rtb-00c786bf7e3c0dbf5",
            "subnet_id": "subnet-0810ca3bf1e0fe22c"
          },
          "dependencies": [
            "aws_eip.dev_nat_eip",
            "aws_internet_gateway.dev_igw",
            "aws_nat_gateway.dev_nat",
            "aws_route_table.dev_pri_rt_c",
            "aws_subnet.dev_node_sub_c",
            "aws_subnet.dev_pub_sub_c",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_pub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085ec7cf770a84404",
            "route_table_id": "rtb-0422b036e88b88603",
            "subnet_id": "subnet-0eae913d1d865e9a2"
          },
          "dependencies": [
            "aws_internet_gateway.dev_igw",
            "aws_route_table.dev_pub_rt",
            "aws_subnet.dev_pub_sub_a",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_pub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04015c0140af1d325",
            "route_table_id": "rtb-0422b036e88b88603",
            "subnet_id": "subnet-001e024346615c7ba"
          },
          "dependencies": [
            "aws_internet_gateway.dev_igw",
            "aws_route_table.dev_pub_rt",
            "aws_subnet.dev_pub_sub_c",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prd_db_pri_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05099144ee2b9c166",
            "route_table_id": "rtb-0f24e95a6e4ce0840",
            "subnet_id": "subnet-0a8a11b544efa1782"
          },
          "dependencies": [
            "aws_eip.prd_nat_eip",
            "aws_internet_gateway.prd_igw",
            "aws_nat_gateway.prd_nat",
            "aws_route_table.prd_pri_rt_a",
            "aws_subnet.prd_db_sub_a",
            "aws_subnet.prd_pub_sub_c",
            "aws_vpc.prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prd_db_pri_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bcf9de048d8087f1",
            "route_table_id": "rtb-07754cc6686d32905",
            "subnet_id": "subnet-01aa04c5bb6a59355"
          },
          "dependencies": [
            "aws_eip.prd_nat_eip",
            "aws_internet_gateway.prd_igw",
            "aws_nat_gateway.prd_nat",
            "aws_route_table.prd_pri_rt_c",
            "aws_subnet.prd_db_sub_c",
            "aws_subnet.prd_pub_sub_c",
            "aws_vpc.prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prd_mgnt_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0710aa549a1b231ba",
            "route_table_id": "rtb-0f24e95a6e4ce0840",
            "subnet_id": "subnet-0f21582fcebb2c353"
          },
          "dependencies": [
            "aws_eip.prd_nat_eip",
            "aws_internet_gateway.prd_igw",
            "aws_nat_gateway.prd_nat",
            "aws_route_table.prd_pri_rt_a",
            "aws_subnet.prd_mgnt_sub_a",
            "aws_subnet.prd_pub_sub_c",
            "aws_vpc.prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prd_mgnt_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e25b1e5e0266d776",
            "route_table_id": "rtb-07754cc6686d32905",
            "subnet_id": "subnet-0359ab69ad2b17e7d"
          },
          "dependencies": [
            "aws_eip.prd_nat_eip",
            "aws_internet_gateway.prd_igw",
            "aws_nat_gateway.prd_nat",
            "aws_route_table.prd_pri_rt_c",
            "aws_subnet.prd_mgnt_sub_c",
            "aws_subnet.prd_pub_sub_c",
            "aws_vpc.prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prd_node_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0134f2e0dc6bf2f16",
            "route_table_id": "rtb-0f24e95a6e4ce0840",
            "subnet_id": "subnet-0d35b7344e4c8794a"
          },
          "dependencies": [
            "aws_eip.prd_nat_eip",
            "aws_internet_gateway.prd_igw",
            "aws_nat_gateway.prd_nat",
            "aws_route_table.prd_pri_rt_a",
            "aws_subnet.prd_node_sub_a",
            "aws_subnet.prd_pub_sub_c",
            "aws_vpc.prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prd_node_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0700877e54a22bfea",
            "route_table_id": "rtb-07754cc6686d32905",
            "subnet_id": "subnet-0c3d6feee194ca0f9"
          },
          "dependencies": [
            "aws_eip.prd_nat_eip",
            "aws_internet_gateway.prd_igw",
            "aws_nat_gateway.prd_nat",
            "aws_route_table.prd_pri_rt_c",
            "aws_subnet.prd_node_sub_c",
            "aws_subnet.prd_pub_sub_c",
            "aws_vpc.prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prd_pub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-006b990036648134c",
            "route_table_id": "rtb-09a24191ae5f3a1a5",
            "subnet_id": "subnet-0acabb83dfbd5ba07"
          },
          "dependencies": [
            "aws_internet_gateway.prd_igw",
            "aws_route_table.prd_pub_rt",
            "aws_subnet.prd_pub_sub_a",
            "aws_vpc.prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prd_pub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01689e43c2af63952",
            "route_table_id": "rtb-09a24191ae5f3a1a5",
            "subnet_id": "subnet-07727c226e54a8661"
          },
          "dependencies": [
            "aws_internet_gateway.prd_igw",
            "aws_route_table.prd_pub_rt",
            "aws_subnet.prd_pub_sub_c",
            "aws_vpc.prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev_bastion_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:703671932868:security-group/sg-0baf5eacb78eae0d7",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0baf5eacb78eae0d7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh",
            "name_prefix": "",
            "owner_id": "703671932868",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-bastion-sg"
            },
            "tags_all": {
              "Name": "dev-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0594e389fa7a3f3ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev_db_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:703671932868:security-group/sg-0f762d2165a12c88c",
            "description": "Allow db inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f762d2165a12c88c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "mysql from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "dev_db20240920024802578300000009",
            "name_prefix": "dev_db",
            "owner_id": "703671932868",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev_allow_mysql_db"
            },
            "tags_all": {
              "Name": "dev_allow_mysql_db"
            },
            "timeouts": null,
            "vpc_id": "vpc-0594e389fa7a3f3ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev_redis_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:703671932868:security-group/sg-0a6b82e60bf4dda1d",
            "description": "Allow access to Redis",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a6b82e60bf4dda1d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "dev_redis_sg",
            "name_prefix": "",
            "owner_id": "703671932868",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0594e389fa7a3f3ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:703671932868:security-group/sg-0294774d62a148425",
            "description": "Allow NFS traffic for EFS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0294774d62a148425",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.250.0.0/16"
                ],
                "description": "NFS from VPC",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "efs-sg",
            "name_prefix": "",
            "owner_id": "703671932868",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "efs-security-group"
            },
            "tags_all": {
              "Name": "efs-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-021a029ebdeeea5f2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:703671932868:security-group/sg-07d3227c565bdda10",
            "description": "Allow ALL traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07d3227c565bdda10",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ALL traffic from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "jenkins",
            "name_prefix": "",
            "owner_id": "703671932868",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jenkins_sg"
            },
            "tags_all": {
              "Name": "jenkins_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-021a029ebdeeea5f2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prd_bastion_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:703671932868:security-group/sg-094b9670dc71e7093",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-094b9670dc71e7093",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh",
            "name_prefix": "",
            "owner_id": "703671932868",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prd-bastion-sg"
            },
            "tags_all": {
              "Name": "prd-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-021a029ebdeeea5f2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prd_db_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:703671932868:security-group/sg-0c3ee9f7eededc1d9",
            "description": "Allow db inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c3ee9f7eededc1d9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "mysql from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "prd_db20240920024800642600000008",
            "name_prefix": "prd_db",
            "owner_id": "703671932868",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prd_allow_mysql_db"
            },
            "tags_all": {
              "Name": "prd_allow_mysql_db"
            },
            "timeouts": null,
            "vpc_id": "vpc-021a029ebdeeea5f2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prd_redis_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:703671932868:security-group/sg-03b88cfc39414b252",
            "description": "Allow access to Redis",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03b88cfc39414b252",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "prd_redis_sg",
            "name_prefix": "",
            "owner_id": "703671932868",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-021a029ebdeeea5f2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_db_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:703671932868:subnet/subnet-093917453196e5c5d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.230.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-093917453196e5c5d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "703671932868",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_db_sub_2a"
            },
            "tags_all": {
              "Name": "dev_db_sub_2a"
            },
            "vpc_id": "vpc-0594e389fa7a3f3ab"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_db_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:703671932868:subnet/subnet-0ac1be726ca2c5afb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.230.23.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ac1be726ca2c5afb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "703671932868",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_db_sub_2c"
            },
            "tags_all": {
              "Name": "dev_db_sub_2c"
            },
            "vpc_id": "vpc-0594e389fa7a3f3ab"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_mgnt_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:703671932868:subnet/subnet-054206002d646b2dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.230.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054206002d646b2dc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "703671932868",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_mgnt_sub_2a"
            },
            "tags_all": {
              "Name": "dev_mgnt_sub_2a"
            },
            "vpc_id": "vpc-0594e389fa7a3f3ab"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_mgnt_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:703671932868:subnet/subnet-0313faf084853301d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.230.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0313faf084853301d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "703671932868",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_mgnt_sub_2c"
            },
            "tags_all": {
              "Name": "dev_mgnt_sub_2c"
            },
            "vpc_id": "vpc-0594e389fa7a3f3ab"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_node_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:703671932868:subnet/subnet-0aaae6a8bfd539cb5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.230.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aaae6a8bfd539cb5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "703671932868",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_node_sub_2a"
            },
            "tags_all": {
              "Name": "dev_node_sub_2a"
            },
            "vpc_id": "vpc-0594e389fa7a3f3ab"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_node_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:703671932868:subnet/subnet-0810ca3bf1e0fe22c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.230.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0810ca3bf1e0fe22c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "703671932868",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-node-sub-2c"
            },
            "tags_all": {
              "Name": "dev-node-sub-2c"
            },
            "vpc_id": "vpc-0594e389fa7a3f3ab"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_pub_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:703671932868:subnet/subnet-0eae913d1d865e9a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.230.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eae913d1d865e9a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "703671932868",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_pub_sub_2a"
            },
            "tags_all": {
              "Name": "dev_pub_sub_2a"
            },
            "vpc_id": "vpc-0594e389fa7a3f3ab"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_pub_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:703671932868:subnet/subnet-001e024346615c7ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.230.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-001e024346615c7ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "703671932868",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_pub_sub_2c"
            },
            "tags_all": {
              "Name": "dev_pub_sub_2c"
            },
            "vpc_id": "vpc-0594e389fa7a3f3ab"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_redis_sub_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:703671932868:subnet/subnet-0ed34989c1699e3bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.230.24.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed34989c1699e3bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "703671932868",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_redis_sub_2a"
            },
            "tags_all": {
              "Name": "dev_redis_sub_2a"
            },
            "vpc_id": "vpc-0594e389fa7a3f3ab"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_redis_sub_2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:703671932868:subnet/subnet-0fd66a811ee51a838",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.230.25.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fd66a811ee51a838",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "703671932868",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_redis_sub_2c"
            },
            "tags_all": {
              "Name": "dev_redis_sub_2c"
            },
            "vpc_id": "vpc-0594e389fa7a3f3ab"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prd_db_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:703671932868:subnet/subnet-0a8a11b544efa1782",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.250.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a8a11b544efa1782",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "703671932868",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prd_db_sub_2a"
            },
            "tags_all": {
              "Name": "prd_db_sub_2a"
            },
            "vpc_id": "vpc-021a029ebdeeea5f2"
          },
          "dependencies": [
            "aws_vpc.prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prd_db_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:703671932868:subnet/subnet-01aa04c5bb6a59355",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.250.23.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01aa04c5bb6a59355",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "703671932868",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prd_db_sub_2c"
            },
            "tags_all": {
              "Name": "prd_db_sub_2c"
            },
            "vpc_id": "vpc-021a029ebdeeea5f2"
          },
          "dependencies": [
            "aws_vpc.prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prd_mgnt_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:703671932868:subnet/subnet-0f21582fcebb2c353",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.250.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f21582fcebb2c353",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "703671932868",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prd_mgnt_sub_2a"
            },
            "tags_all": {
              "Name": "prd_mgnt_sub_2a"
            },
            "vpc_id": "vpc-021a029ebdeeea5f2"
          },
          "dependencies": [
            "aws_vpc.prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prd_mgnt_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:703671932868:subnet/subnet-0359ab69ad2b17e7d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.250.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0359ab69ad2b17e7d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "703671932868",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prd_mgnt_sub_2c"
            },
            "tags_all": {
              "Name": "prd_mgnt_sub_2c"
            },
            "vpc_id": "vpc-021a029ebdeeea5f2"
          },
          "dependencies": [
            "aws_vpc.prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prd_node_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:703671932868:subnet/subnet-0d35b7344e4c8794a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.250.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d35b7344e4c8794a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "703671932868",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prd_node_sub_2a"
            },
            "tags_all": {
              "Name": "prd_node_sub_2a"
            },
            "vpc_id": "vpc-021a029ebdeeea5f2"
          },
          "dependencies": [
            "aws_vpc.prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prd_node_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:703671932868:subnet/subnet-0c3d6feee194ca0f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.250.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3d6feee194ca0f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "703671932868",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prd-node-sub-2c"
            },
            "tags_all": {
              "Name": "prd-node-sub-2c"
            },
            "vpc_id": "vpc-021a029ebdeeea5f2"
          },
          "dependencies": [
            "aws_vpc.prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prd_pub_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:703671932868:subnet/subnet-0acabb83dfbd5ba07",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.250.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0acabb83dfbd5ba07",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "703671932868",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prd_pub_sub_2a"
            },
            "tags_all": {
              "Name": "prd_pub_sub_2a"
            },
            "vpc_id": "vpc-021a029ebdeeea5f2"
          },
          "dependencies": [
            "aws_vpc.prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prd_pub_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:703671932868:subnet/subnet-07727c226e54a8661",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.250.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07727c226e54a8661",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "703671932868",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prd_pub_sub_2c"
            },
            "tags_all": {
              "Name": "prd_pub_sub_2c"
            },
            "vpc_id": "vpc-021a029ebdeeea5f2"
          },
          "dependencies": [
            "aws_vpc.prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prd_redis_sub_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:703671932868:subnet/subnet-0787d8e05a868e450",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.250.24.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0787d8e05a868e450",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "703671932868",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prd_redis_sub_2a"
            },
            "tags_all": {
              "Name": "prd_redis_sub_2a"
            },
            "vpc_id": "vpc-021a029ebdeeea5f2"
          },
          "dependencies": [
            "aws_vpc.prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prd_redis_sub_2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:703671932868:subnet/subnet-0dee276d08f0cc50a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.250.25.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dee276d08f0cc50a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "703671932868",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prd_redis_sub_2c"
            },
            "tags_all": {
              "Name": "prd_redis_sub_2c"
            },
            "vpc_id": "vpc-021a029ebdeeea5f2"
          },
          "dependencies": [
            "aws_vpc.prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:703671932868:vpc/vpc-0594e389fa7a3f3ab",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.230.0.0/16",
            "default_network_acl_id": "acl-09b0a259615deb4ce",
            "default_route_table_id": "rtb-02aa010d50fe0981c",
            "default_security_group_id": "sg-081f9303721169548",
            "dhcp_options_id": "dopt-04c1935f49d0b78b3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0594e389fa7a3f3ab",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02aa010d50fe0981c",
            "owner_id": "703671932868",
            "tags": {
              "Name": "dev_vpc"
            },
            "tags_all": {
              "Name": "dev_vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prd_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:703671932868:vpc/vpc-021a029ebdeeea5f2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.250.0.0/16",
            "default_network_acl_id": "acl-07a6df1763e2c44ca",
            "default_route_table_id": "rtb-0f576bcaa5b072f1d",
            "default_security_group_id": "sg-09c6b01c480250b71",
            "dhcp_options_id": "dopt-04c1935f49d0b78b3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-021a029ebdeeea5f2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f576bcaa5b072f1d",
            "owner_id": "703671932868",
            "tags": {
              "Name": "prd_vpc"
            },
            "tags_all": {
              "Name": "prd_vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "prd_dev_peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-08b54cb2038701bb5",
            "peer_owner_id": "703671932868",
            "peer_region": "ap-northeast-2",
            "peer_vpc_id": "vpc-0594e389fa7a3f3ab",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "prd-dev-peering"
            },
            "tags_all": {
              "Name": "prd-dev-peering"
            },
            "vpc_id": "vpc-021a029ebdeeea5f2"
          },
          "dependencies": [
            "aws_vpc.dev_vpc",
            "aws_vpc.prd_vpc"
          ]
        }
      ]
    }
  ]
}